--- a/flex.html
+++ b/flex.html
@@ -7,12 +7,35 @@
   </head>
   
   <body>
-    <div class="flex">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-    </div>
+    <header>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </header>
 
+    <main>
+      <div class="sidebar"></div>
+      <div class="main-box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </main>
+
+    <footer>
+
+        <div></div>
+        <div></div>
+        <div></div>
+
+    </footer>
   </body>
 </html>
